# s4md

./: README.md  check_all.bat  check_all.sh  create_venv.bat  create_venv.sh  pyproject.toml  requirements.txt  requirements_dev.txt
data/: documents.csv  documents.sqlite3  skipped_documents.csv
src/s4md/: crawler.py  downloader.py
src/s4md/crawlers/: crpd.py  european_agency.py  gov_mt.py  il_huttafa.py  l_accent.py  um_oar.py
